Gravity, jumpForce, maxSpeed are now set as variables; fixed GitHub link

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -23,9 +23,11 @@ body, html {
     border: 1px solid black;
   }
 
-  a {
-    display:block;
+  p {
     margin-top: 20px;
-    color: #999;
+    a {
+      color: #999;
+    }
+    
   }
 }
